--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,8 @@
 /API/node_modules
 /API/config.js
 
+/client/src/docs/fotos_func
+
 /node_modules
 
 # See https://help.github.com/articles/ignoring-files/ for more about ignoring files.
